# india-index-investing

./: README.md  pyproject.toml
src/data/: benchmark_price_return.csv  benchmark_total_return.csv  midcap150.csv  nifty50.csv  niftynext50.csv  smallcap250.csv
src/india-index-investing/: __init__.py  analysis.ipynb
