[project]
name = "index-investing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "yfinance>=0.2.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
